96. Dựng khung Layout mặc định

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,10 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=PT+Serif&family=Signika:wght@300;400;500;600;700&display=swap');
 :root {
     --primary: #ff3b5c;
+
+    //DefaultLayout
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
 }
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
