--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=PT+Serif&family=Signika:wght@300;400;500;600;700&display=swap');
 :root {
     --primary: #ff3b5c;
+    --black-color: #000;
+    --text-color: #333;
 
     //DefaultLayout
     --default-layout-header-height: 60px;
@@ -26,4 +28,16 @@ body {
     font-size: 1.6rem;
     text-rendering: optimizespeed;
     line-height: 1.5;
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
