99. Xây dựng UI phần Header #3

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,9 +1,10 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=PT+Serif&family=Signika:wght@300;400;500;600;700&display=swap');
 :root {
-    --primary: #ff3b5c;
+    --primary: #fe2c55;
     --black-color: #000;
     --text-color: #333;
+    --white-color: #fff;
 
     //DefaultLayout
     --default-layout-header-height: 60px;
@@ -28,6 +29,7 @@ body {
     font-size: 1.6rem;
     text-rendering: optimizespeed;
     line-height: 1.5;
+    color: var(--text-color);
 }
 
 button,
@@ -38,6 +40,6 @@ input,
 }
 
 a[href] {
-    color: var(--text-color);
+    // color: var(--text-color);
     text-decoration: none;
 }
