--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -21,9 +21,20 @@
 .logo {
 }
 
+.search,
+.search-results {
+    width: 361px;
+}
+
+.search-title {
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+}
+
 .search {
     position: relative;
-    width: 361px;
     height: var(--search-height);
     padding-left: 16px;
     background-color: rgb(22, 24, 25, 0.06);
@@ -81,4 +92,12 @@
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
     }
+}
+
+.plus {
+    margin-right: 6px;
+}
+
+.custom-login {
+    color: green;
 }
