--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,12 +3,13 @@
 :root {
     --primary: #fe2c55;
     --black-color: #000;
-    --text-color: #333;
+    --text-color: #161823;
     --white-color: #fff;
 
     //DefaultLayout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --default-layout-horizontal-spacer: 24px;
 }
 
 * {
@@ -40,6 +41,29 @@ input,
 }
 
 a[href] {
-    // color: var(--text-color);
+    color: var(--text-color);
     text-decoration: none;
+}
+
+// Custom tippy tooltip
+
+body {
+    .tippy-box {
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+        background-color: rgba(84, 84, 84, 0.92);
+    }
+
+    .tippy-arrow {
+        color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-content {
+        padding: 8px 9px;
+    }
+
+    .tippy-arrow[data-placement^='bottom'] > .tippy-arrow::before {
+        top: -8px;
+    }
 }
