--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     --search-border-radius: 92px;
-    --search-height: 46px;
+    --search-height: 49px;
     --search-top-spacer: 9px;
     --search-button-width: 52px;
 
@@ -14,11 +14,10 @@
 .inner {
     height: 100%;
     width: var(--default-layout-width);
+    padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-.logo {
 }
 
 .search,
@@ -100,4 +99,36 @@
 
 .custom-login {
     color: green;
+}
+
+//Actions
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.more-btn {
+    font-size: 2rem;
+    margin-left: 28px;
+    padding: 4px 10px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.action-btn {
+    padding: 4px 24px;
+    width: 26px;
+    height: 26px;
+    background-color: #fff;
+    border: 0;
+    box-shadow: 0 1px transparent;
+    cursor: pointer;
+}
+
+.user-avatar {
+    cursor: pointer;
+    margin-left: 12px;
+    width: 32px;
+    object-fit: cover;
+    border-radius: 50%;
 }
