--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -20,79 +20,6 @@
     justify-content: space-between;
 }
 
-.search,
-.search-results {
-    width: 361px;
-}
-
-.search-title {
-    padding: 5px 12px;
-    font-size: 1.4rem;
-    font-weight: 600;
-    color: rgba(22, 24, 35, 0.5);
-}
-
-.search {
-    position: relative;
-    height: var(--search-height);
-    padding-left: 16px;
-    background-color: rgb(22, 24, 25, 0.06);
-    border-radius: var(--search-border-radius);
-    border: 1.5px solid transparent;
-    display: flex;
-
-    input {
-        flex: 1;
-        height: 100%;
-        color: var(--black-color);
-        font-size: 1.6rem;
-        caret-color: var(--primary);
-        background-color: transparent;
-    }
-
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: rgba(22, 24, 35, 0.75);
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        top: var(--search-top-spacer);
-        right: var(--search-button-width);
-        width: 1px;
-        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
-        background-color: rgba(22, 24, 35, 0.12);
-    }
-    &:focus-within {
-        border: 1.5px solid rgba(22, 24, 35, 0.2);
-    }
-}
-
-.clear,
-.loading {
-    position: absolute;
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-    color: rgba(22, 24, 35, 0.34);
-}
-
-.search-btn {
-    width: var(--search-button-width);
-    height: 100%;
-    border-top-right-radius: var(--search-border-radius);
-    border-bottom-right-radius: var(--search-border-radius);
-    font-size: 1.8rem;
-    color: rgba(22, 24, 35, 0.34);
-    &:hover {
-        cursor: pointer;
-        background-color: rgba(22, 24, 35, 0.03);
-    }
-    &:active {
-        background-color: rgba(22, 24, 35, 0.06);
-    }
-}
-
 .plus {
     margin-right: 6px;
 }
@@ -116,10 +43,27 @@
 }
 
 .action-btn {
+    position: relative;
+    display: flex;
     color: #161823;
     background-color: transparent;
     margin-left: 16px;
     cursor: pointer;
+}
+
+.badge {
+    position: absolute;
+    top: -6px;
+    right: -10px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--white-color);
+    font-family: 'ProximaNova', sans-serif;
+    background-color: var(--primary);
 }
 
 .user-avatar {
