--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -20,6 +20,10 @@
     justify-content: space-between;
 }
 
+.logo-link {
+    display: flex;
+}
+
 .plus {
     margin-right: 6px;
 }
@@ -62,7 +66,9 @@
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--white-color);
-    font-family: 'ProximaNova', sans-serif;
+    // font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
+
     background-color: var(--primary);
 }
 
