--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -20,6 +20,9 @@
     display: flex;
 
     input {
+        // font-family: 'ProximaNova', sans-serif;
+        font-family: var(--font-family);
+
         flex: 1;
         height: 100%;
         color: var(--black-color);
