--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -4,11 +4,16 @@
     --search-top-spacer: 9px;
     --search-button-width: 52px;
 
-    width: 100%;
-    height: var(--default-layout-header-height, 60px);
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--white-color);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
+    height: var(--default-layout-header-height);
+    width: 100%;
+    z-index: 10;
 }
 
 .inner {
