--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-height: min((100vh - 96px) - 60px, 734px);
     min-height: 100px;
@@ -6,4 +8,6 @@
     border-radius: 8px;
     background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
+    display: flex;
+    flex-direction: column;
 }
