--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -22,7 +22,7 @@
     input {
         // font-family: 'ProximaNova', sans-serif;
         font-family: var(--font-family);
-
+        padding-right: 40px;
         flex: 1;
         height: 100%;
         color: var(--black-color);
